--- a/templates/find_by_pid/gallery.html.twig
+++ b/templates/find_by_pid/gallery.html.twig
@@ -33,7 +33,9 @@
                 }) }} </span>{{ gallery.getTitle() }}</h1>
         <p class="delta">{{ gallery.getShortSynopsis() }}</p>
 
-        {{ ds2013('galleryDisplay', gallery, image, images, hasImageHighlighted ,[]) }}
+        {% if image %}
+            {{ ds2013('galleryDisplay', gallery, image, images, hasImageHighlighted ,[]) }}
+        {% endif %}
     </div>
 
     {% if programme %}
